# crawldata

./: .gitignore  CLAUDE.md  Makefile  README.md  crawl-clean-dataset-service.md  dvc.yaml  pyproject.toml
.claude/skills/verify-design-spec/: SKILL.md  verify.mjs
apps/agent/: pyproject.toml
apps/agent/src/crawl_datasets_agent/: __init__.py  __main__.py  intake.py  llm.py  plan.py  run_plan.py
apps/builder/: pyproject.toml
apps/builder/src/crawl_datasets_builder/: __init__.py  __main__.py  formats.py  pipeline.py  synth.py
apps/cleaner/: pyproject.toml
apps/cleaner/src/crawl_datasets_cleaner/: __init__.py  __main__.py  decontam.py  dedup.py  filters.py  lid.py  normalize.py  pii.py  pipeline.py  quality.py
apps/crawler/: pyproject.toml
apps/crawler/src/crawl_datasets_crawler/: __init__.py  __main__.py  frontier.py  pipeline.py  render.py
apps/extractor/: pyproject.toml
apps/extractor/src/crawl_datasets_extractor/: __init__.py  __main__.py  html_extract.py  pdf_extract.py  pipeline.py
apps/integrator/: pyproject.toml
apps/integrator/src/crawl_datasets_integrator/: __init__.py  __main__.py  crossdedup.py  mix.py  pipeline.py
apps/probe/: pyproject.toml
apps/probe/src/crawl_datasets_probe/: __init__.py  __main__.py  pipeline.py  probe.py
apps/profiler/: pyproject.toml
apps/profiler/src/crawl_datasets_profiler/: __init__.py  __main__.py  cluster.py  pipeline.py  profile.py
apps/service/: pyproject.toml
apps/service/src/crawl_datasets_service/: __init__.py  main.py  worker.py
configs/: default.yaml  dev.yaml
libs/common/: README.md  pyproject.toml
libs/common/src/crawl_datasets_common/: __init__.py  fetch.py  licensing.py  llm.py  observability.py  provenance.py  schema.py  settings.py  storage.py
ops/: Dockerfile  docker-compose.yml  prometheus.yml
ops/grafana/dashboards/: funnel.json
ops/grafana/provisioning/dashboards/: dashboards.yml
reports/: audit-report-2026-07-03.md
scripts/: smoke_e2e.sh  smoke_report.py
tests/: conftest.py  test_agent.py  test_builder.py  test_cleaner.py  test_crawler.py  test_entrypoints.py  test_extractor.py  test_integrator.py  test_packaging.py  test_pipeline_e2e.py  test_probe.py  test_profiler.py  test_provenance.py  test_schema.py  test_service.py  test_settings.py  test_storage.py  test_verifier.py
tests/fixtures/smoke_site/: en-budget-dup.html  en-nolicense.html  en-short.html  index.html  robots.txt  sitemap.xml  vi-hanoi.html  vi-lienhe.html
