[project]
name = "crawl-datasets-agent"
version = "1.3.0"
description = "§14 — Agent intake: URL + nhu cầu → LLM phân tích/hỏi lại → DatasetPlan → pipeline"
requires-python = ">=3.12"
dependencies = [
    "crawl-datasets-common",
    "crawl-datasets-probe",
    "crawl-datasets-crawler",
    "crawl-datasets-extractor",
    "crawl-datasets-cleaner",
    "crawl-datasets-profiler",
    "crawl-datasets-builder",
    "click>=8.1",
]

[project.optional-dependencies]
# LLM client gọi API OpenAI-compatible (Ollama/llama.cpp/LM Studio) qua httpx.
llm = ["httpx>=0.27"]
dev = ["ruff>=0.4", "mypy>=1.10", "pytest>=8.2"]

[project.scripts]
crawl-datasets-agent = "crawl_datasets_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crawl_datasets_agent"]
