[project]
name = "crawl-datasets-builder"
version = "1.3.0"
description = "S5 — Build dataset (ChatML/ShareGPT/Alpaca → Parquet)"
requires-python = ">=3.12"
dependencies = [
    "crawl-datasets-common",
    "click>=8.1",
    "datasets>=2.20",
    "pyarrow>=16.0",
]

[project.optional-dependencies]
# §7.1 Phase B — synth QA gọi LLM local qua httpx (common/llm.py, gated).
synth = ["httpx>=0.27"]
dev = ["ruff>=0.4", "mypy>=1.10", "pytest>=8.2"]

[project.scripts]
crawl-datasets-build = "crawl_datasets_builder.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crawl_datasets_builder"]