[project]
name = "crawl-datasets-cleaner"
version = "1.3.0"
description = "S3 — Clean + filter (NFC, GlotLID, Gopher, MinHash, Presidio)"
requires-python = ">=3.12"
dependencies = [
    "crawl-datasets-common",
    "click>=8.1",
    "datatrove>=0.2",
    "ftfy>=6.2",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
]

[project.optional-dependencies]
# GlotLID-M v3 (§5.2) = model fasttext trên HuggingFace (cis-lmu/glotlid),
# KHÔNG phải package PyPI. Tải model qua huggingface-hub, load bằng fasttext.
lid = ["fasttext-wheel>=0.9", "huggingface-hub>=0.20"]
embed = ["sentence-transformers>=3.0", "FlagEmbedding>=1.2"]
gpu-dedup = ["nemo-curator>=0.4"]
dev = ["ruff>=0.4", "mypy>=1.10", "pytest>=8.2"]

[project.scripts]
crawl-datasets-clean = "crawl_datasets_cleaner.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crawl_datasets_cleaner"]