[project]
name = "crawl-datasets-crawler"
version = "1.3.0"
description = "S1 — Crawl (Scrapy / httpx+selectolax / Playwright)"
requires-python = ">=3.12"
dependencies = [
    "crawl-datasets-common",
    "click>=8.1",
    "httpx>=0.27",
    "selectolax>=0.3.2",
]

[project.optional-dependencies]
playwright = ["playwright>=1.44"]
scrapy = ["scrapy>=2.11"]
redis = ["redis>=5.0", "redisbloom>=0.3"]
dev = ["ruff>=0.4", "mypy>=1.10", "pytest>=8.2"]

[project.scripts]
crawl-datasets-crawl = "crawl_datasets_crawler.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crawl_datasets_crawler"]