[project]
name = "crawl-datasets-extractor"
version = "1.3.0"
description = "S2 — Extract (trafilatura, pymupdf, MinerU)"
requires-python = ">=3.12"
dependencies = [
    "crawl-datasets-common",
    "click>=8.1",
    "trafilatura>=1.6.3",
]

[project.optional-dependencies]
pdf = ["pymupdf>=1.24"]
rs = ["rs-trafilatura>=0.1.0"]
mineru = ["magic-pdf>=0.7"]
dev = ["ruff>=0.4", "mypy>=1.10", "pytest>=8.2"]

[project.scripts]
crawl-datasets-extract = "crawl_datasets_extractor.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crawl_datasets_extractor"]