[project]
name = "crawl-datasets-probe"
version = "1.3.0"
description = "S0 — Source probe (robots, sitemap, JS, license)"
requires-python = ">=3.12"
dependencies = [
    "crawl-datasets-common",
    "click>=8.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["ruff>=0.4", "mypy>=1.10", "pytest>=8.2"]

[project.scripts]
crawl-datasets-probe = "crawl_datasets_probe.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crawl_datasets_probe"]