[project]
name = "crawl-datasets-profiler"
version = "1.3.0"
description = "S4 — Profile + suggestions (distribution, anomaly, clustering)"
requires-python = ">=3.12"
dependencies = [
    "crawl-datasets-common",
    "click>=8.1",
]

[project.optional-dependencies]
# Clustering (§6, P1 hook) — backend nặng, gate qua extra như embed.
# Floors: numba/llvmlite bản ≤0.53/0.36 không khai requires-python upper bound
# nên resolver có thể chọn nhầm sdist-only → vỡ build trên Python 3.13.
cluster = [
    "umap-learn>=0.5",
    "hdbscan>=0.8",
    "numba>=0.61",
    "llvmlite>=0.44",
]
embed = ["sentence-transformers>=3.0", "FlagEmbedding>=1.2"]
dev = ["ruff>=0.4", "mypy>=1.10", "pytest>=8.2"]

[project.scripts]
crawl-datasets-profile = "crawl_datasets_profiler.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crawl_datasets_profiler"]