[project]
name = "crawl-datasets-service"
version = "1.3.0"
description = "FastAPI + arq job queue"
requires-python = ">=3.12"
dependencies = [
    "crawl-datasets-common",
    "crawl-datasets-crawler",
    "crawl-datasets-builder",
    "crawl-datasets-integrator",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "arq>=0.25",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = ["ruff>=0.4", "mypy>=1.10", "pytest>=8.2", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crawl_datasets_service"]